# fastapi-coc.py

./: .env.example  .gitignore  README.md  clash.py  config.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: renovate.json
.github/workflows/: codeql-analysis.yml  continuous-integration.yml
app/: main.py
app/clash/: __init__.py
app/templates/: player.html
